--- a/_cases/2022/DIVD-2022-00010.md
+++ b/_cases/2022/DIVD-2022-00010.md
@@ -4,7 +4,7 @@ title: "Auth bypass in SAP"
 excerpt: "Unauthenticated user impersonation (auth bypass) in SAP Posted on February 8 2022"
 author: Patrick Hulshof
 lead: Patrick Hulshof
-status : Open
+status : Closed
 researchers:
 - Wietse Boonstra
 - Ralph Horn
@@ -15,7 +15,7 @@ versions: SAP NetWeaver, SAP Content Server, and SAP Web Dispatcher.
 recommendation: "Patches are available now from the vendor."
 -workaround: n/a
 start: 2022-02-08
-end:
+end: 2022-04-10
 timeline:
 - start: 2022-02-08
   end:
@@ -38,6 +38,9 @@ timeline:
 - start: 2022-02-13
   end:
   event: DIVD send out a second batch of notifications.
+- start: 2022-04-10
+  end:
+  event: Closing this case after monitoring patch progression.
 ---
 ## Summary
 
