--- a/_cases/2022/DIVD-2022-00022.md
+++ b/_cases/2022/DIVD-2022-00022.md
@@ -7,7 +7,7 @@ author: Max van der Horst
 lead: Victor Gevers
 redirect_from:
 - /DIVD-2022-00022/
-status : Open
+status : Closed
 researchers:
 - Victor Gevers
 - Pepijn van der Stap
@@ -21,7 +21,7 @@ recommendation: "Scan your system with the WSM Cyclops Blink Detector to verify 
 patch_status:	Available
 -workaround: n/a
 start: 2022-03-29
-end:
+end: 2022-10-31
 timeline:
 - start: 2022-03-29
   end:
@@ -29,6 +29,9 @@ timeline:
 - start: 2022-03-29
   end:
   event: First version of this case file.
+- start: 2022-10-31
+  end:
+  event: Decision made to close this case as a non intrusive detection was impossible.
 
 ---
 ## Summary
