--- a/_cases/2022/DIVD-2022-00027.md
+++ b/_cases/2022/DIVD-2022-00027.md
@@ -5,7 +5,7 @@ divd: DIVD-2022-00027
 excerpt: "F5 BIG-IP is vulnerable to remote code execution due to a vulnerability that allows attackers to execute commands by leveraging a authentication bypass in the REST API. DIVD is actively notifying owners of vulnerable systems"
 author: Pepijn van der Stap
 lead: Ralph Horn
-status: Open
+status: Closed
 researchers:
 - Pepijn van der Stap
 - Tom Wolters
@@ -19,7 +19,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status: Available
 -workaround:
 start: 2022-05-10
-end:
+end: 2022-06-25
 timeline:
 - start: 2022-05-10
   end:
@@ -39,6 +39,9 @@ timeline:
 - start: 2022-06-10
   end:
   event: Shared the data concerning the Netherlands with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
+- start: 2022-06-25
+  end:
+  event: After monitoring the decrease in vulnerable systems we've decided to close this case.
 
 ---
 
