chore(00029): bump casefile

--- a/_cases/2022/DIVD-2022-00029.md
+++ b/_cases/2022/DIVD-2022-00029.md
@@ -30,6 +30,9 @@ timeline:
 - start: 2022-06-12
   end:
   event: Shared the data concerning the Netherlands with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)
+- start: 2022-09-27
+  end:
+  event: Another round of notifications sent to the affected parties
 
 ---
 
