chore(00053): bump casefile

--- a/_cases/2022/DIVD-2022-00053.md
+++ b/_cases/2022/DIVD-2022-00053.md
@@ -27,6 +27,9 @@ timeline:
 - start: 2022-09-22
   end:
   event: "DIVD starts first round of notifications."
+- start: 2022-10-11
+  end:
+  event: "DIVD starts second round of notifications."
 
 ---
 
