[DIVD-2022-00051] Update H2 database case file

--- a/_cases/2022/DIVD-2022-00051.md
+++ b/_cases/2022/DIVD-2022-00051.md
@@ -26,8 +26,12 @@ timeline:
   end:
   event: "H2 released version 2.1.210 and reported about CVE-2022-23221"
 - start: 2022-09-09
-  end:
+  end: 2022-10-07
   event: "DIVD starts scanning for vulnerabilities."
+- start: 2022-10-07
+  end:
+  event: First round of notifications sent
+ips: 144
 ---
 
 ## Summary
