More numbers for cases

--- a/_cases/2021/DIVD-2021-00037.md
+++ b/_cases/2021/DIVD-2021-00037.md
@@ -101,7 +101,7 @@ timeline:
 - start: 2022-10-10
   end:   
   event: "Case Closed"
-ips: 0 
+ips: n/a
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
 # The lines below redirect all the CVE references to our site
