Fix cases where IP's was missing.

--- a/_cases/2022/DIVD-2022-00010.md
+++ b/_cases/2022/DIVD-2022-00010.md
@@ -41,6 +41,7 @@ timeline:
 - start: 2022-04-10
   end:
   event: Closing this case after monitoring patch progression.
+ips: 8928
 ---
 ## Summary
 
