--- a/_cases/2022/DIVD-2022-00022.md
+++ b/_cases/2022/DIVD-2022-00022.md
@@ -32,7 +32,7 @@ timeline:
 - start: 2022-10-31
   end:
   event: Decision made to close this case as a non intrusive detection was impossible.
-
+ips: n/a
 ---
 ## Summary
 
