--- a/_cases/2022/DIVD-2022-00027.md
+++ b/_cases/2022/DIVD-2022-00027.md
@@ -42,7 +42,7 @@ timeline:
 - start: 2022-06-25
   end:
   event: After monitoring the decrease in vulnerable systems we've decided to close this case.
-
+ips: 727
 ---
 
 ## Summary
