--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -28,6 +28,24 @@ timeline:
 - start: 2022-10-05
   end:
   event: "First version of this case file."
+- start: 2022-10-05
+  end:
+  event: "First explorative scan."
+- start: 2022-10-06
+  end:
+  event: "First scan with fingerprint."
+- start: 2022-10-06
+  end:
+  event: "Mitigation bypass found for vulnerabilities, changing approach to scanning."
+- start: 2022-10-06
+  end:
+  event: "Decision to reiterate on ProxyShell and ProxyOracle cases."
+- start: 2022-10-17
+  end:
+  event: "First version of notification email."
+- start: 2022-10-26
+  end:
+  event: "First mail run completed."
 
 ---
 
