--- a/_cases/2022/DIVD-2022-00019.md
+++ b/_cases/2022/DIVD-2022-00019.md
@@ -20,13 +20,23 @@ end:
 timeline:
 - start: 2022-03-19
   end:
-  event:  DIVD started reviewing applications globally.
+  event: DIVD started reviewing applications globally.
 - start: 2022-03-30
   end: 2022-03-31
-  event:  Scan of applications completed.
+  event: Scan of applications completed.
 - start: 2022-03-31
   end: 2022-04-14
-  event:  Applications have been analysed. Findings have been communicated with Mendix for further actions.
+  event: Applications have been analysed. Findings have been communicated with Mendix for further actions.
+- start: 2022-10-10
+  end: 
+  event: A second round of scanning has been performed.
+- start: 2022-10-15
+  end: 
+  event: Results have been analysed and organizations contacted.
+- start: 2022-11-07
+  end: 
+  event: After monitoring the decrease in vulnerable systems we’ve decided to close this case.
+
 
 ---
 ## Summary
