Closing Grafana DIVD-2022-00002

--- a/_cases/2022/DIVD-2022-00002.md
+++ b/_cases/2022/DIVD-2022-00002.md
@@ -8,7 +8,7 @@ author: Tom Wolters
 lead: Tom Wolters
 redirect_from:
 - /DIVD-2022-00002/
-status : Open
+status : Closed
 researchers:
 - Diego Klinkhamer
 - Tom Wolters
