--- a/_cases/2022/DIVD-2022-00002.md
+++ b/_cases/2022/DIVD-2022-00002.md
@@ -20,7 +20,7 @@ recommendation: "Upgrade to version v8.3.1"
 patch_status: Full patched
 -workaround: n/a
 start: 2021-12-07
-end:
+end: 2022-11-07
 timeline:
 - start: 2021-12-03
   end:
