--- a/_cases/2022/DIVD-2022-00019.md
+++ b/_cases/2022/DIVD-2022-00019.md
@@ -3,7 +3,7 @@ layout: case
 title: Insecure Mendix Applications
 author: John Cornegge
 lead: Victor Gevers
-status: Open
+status: Closed
 excerpt: DIVD is researching misconfigured Entity access rules in applications built with the Mendix Platform.
 researchers:
 - Victor Gevers 
@@ -15,8 +15,8 @@ product: Mendix Low Code Platform
 versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 -workaround: Review Access rules applied to Anonymous users.
-start: 2022-03-19
-end:
+  start: 2022-03-19
+  end: 2022-11-07
 timeline:
 - start: 2022-03-19
   end:
@@ -28,10 +28,10 @@ timeline:
   end: 2022-04-14
   event: Applications have been analysed. Findings have been communicated with Mendix for further actions.
 - start: 2022-10-10
-  end: 
+  end: 2022-10-25
   event: A second round of scanning has been performed.
 - start: 2022-10-15
-  end: 
+  end: 2022-10-25
   event: Results have been analysed and organizations contacted.
 - start: 2022-11-07
   end: 
