--- a/_cases/2022/DIVD-2022-00019.md
+++ b/_cases/2022/DIVD-2022-00019.md
@@ -36,7 +36,7 @@ timeline:
 - start: 2022-11-07
   end: 
   event: After monitoring the decrease in vulnerable systems we’ve decided to close this case.
-
+ips: 230
 
 ---
 ## Summary
