--- a/_cases/2022/DIVD-2022-00019.md
+++ b/_cases/2022/DIVD-2022-00019.md
@@ -14,9 +14,9 @@ cves: n/a
 product: Mendix Low Code Platform
 versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
--workaround: Review Access rules applied to Anonymous users.
-  start: 2022-03-19
-  end: 2022-11-07
+workaround: Review Access rules applied to Anonymous users.
+start: 2022-03-19
+end: 2022-11-07
 timeline:
 - start: 2022-03-19
   end:
