chore(00021): bump casefile

--- a/_cases/2022/DIVD-2022-00021.md
+++ b/_cases/2022/DIVD-2022-00021.md
@@ -48,6 +48,9 @@ timeline:
 - start: 2022-09-20
   event: Rescan, notifications sent out
   end:
+- start: 2022-11-13
+  event: Rescan, notifications sent out
+  end:
 
 ---
 ## Summary
