--- a/_cases/2022/DIVD-2022-00042.md
+++ b/_cases/2022/DIVD-2022-00042.md
@@ -37,7 +37,7 @@ The print portal is setup to allow 'guest' users that do not need to have a cred
 In versions of the print portal from between 2012 and 2020 the pincode option to authenticate can sometimes be bypassed by using the pin '0000'. This gives full access to the print portal.
 
 ## What you can do
-Limit who has access to the print portal and from where. Turn on authentication on the print portal. If the print portal is affected by CVE-2021-38154 consider setting up HTTP basic authentication in addition to the Canon authentication process. A loadbalancer with a login from an identityprovider in front of the print portal can mitigate the risk as well. Canon has not patched this vulnerability. Other options are to let the print portal only be accessible through trusted network segments.
+Limit who has access to the print portal and from where. Turn on authentication on the print portal. If the print portal is affected by {% cve: CVE-2021-38154 %} consider setting up HTTP basic authentication in addition to the Canon authentication process. A loadbalancer with a login from an identityprovider in front of the print portal can mitigate the risk as well. Canon has not patched this vulnerability. Other options are to let the print portal only be accessible through trusted network segments.
 
 ## What we are doing
 
