--- a/_cases/2022/DIVD-2022-00026.md
+++ b/_cases/2022/DIVD-2022-00026.md
@@ -5,7 +5,7 @@ divd: DIVD-2022-00026
 excerpt: "WSO2 servers are vulnerable to remote code execution due to a vulnerability that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems"
 author: Pepijn van der Stap
 lead: Victor Pasman
-status: Open
+status: Closed
 researchers:
 - Sjors Roelfzema
 - Pepijn van der Stap
@@ -31,7 +31,16 @@ timeline:
 - start: 2022-05-15
   end: 
   event: Notified about 450 vulnerable hosts.
-
+- start: 2022-07-01
+  end: 
+  event: Notified 134 host that were still vulnerable.
+- start: 2022-11-19
+  end: 
+  event: Sent a final reminder to the 53 hosts that are still vulnerable.
+- start: 2022-11-20
+  end: 
+  event: Closing this case.
+ips: 441
 ---
 
 ## Summary
