--- a/_cases/2022/DIVD-2022-00026.md
+++ b/_cases/2022/DIVD-2022-00026.md
@@ -20,7 +20,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status: Available
 -workaround:
 start: 2022-04-24
-end:
+end: 2022-11-20
 timeline:
 - start: 2022-04-24
   end:
