--- a/_cases/2022/DIVD-2022-00021.md
+++ b/_cases/2022/DIVD-2022-00021.md
@@ -4,7 +4,7 @@ title: "Ivanti EPM CSA remote code execution"
 short: "A remote code execution was discovered in Ivanti Endpoint Manager Cloud Service Appliance (CSA)."
 author: Pepijn van der Stap
 lead: Victor Gevers
-status: Open
+status: Closed
 excerpt: DIVD is searching for vulnerable instances of the Ivanti EPM Cloud Services Appliance (CSA).
 researchers:
 - Pepijn van der Stap
@@ -16,7 +16,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status: Available
 workaround: "sed -i '/Obscure Tokens/{N;N;N;N;N;N;N;N;N;d}' /opt/landesk/broker/webroot/lib/csrf-magic.php"
 start: 2022-03-25
-end:
+end: 2022-11-20
 timeline:
 - start: 2021-12-02
   end:
@@ -51,7 +51,10 @@ timeline:
 - start: 2022-11-13
   event: Rescan, notifications sent out
   end:
-
+- start: 2022-11-20
+  event: Closing this case.
+  end:
+ips: 998
 ---
 ## Summary
 
