--- a/DIVD-2022-00020.md
+++ b/DIVD-2022-00020.md
@@ -1,7 +1,7 @@
 ---
 layout: case
-title: "DIVD-2022-00020 - Multiple Injection Vulnerabilities and Privilege Escalation in OSNEXUS QuantaStor"
-divd: DIVD-2022-00020
+title: "DIVD-2021-00020 - Multiple Injection Vulnerabilities and Privilege Escalation in OSNEXUS QuantaStor"
+divd: DIVD-2021-00020
 excerpt: "There are multiple discovered vulnerabilities inside OSNEXUS QuantaStor involving injection (SSRF, XSS, RCE) and privilege escalation."
 author: Max van der Horst
 lead: Victor Gevers
@@ -52,5 +52,4 @@ By leveraging these vulnerabilities, an attacker could execute code on the webpa
 {% include timeline.html %}
 
 ## More information
-* [Mitre](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2022-21371)
-* [F5 Article](https://support.f5.com/csp/article/K21406935)
+* [OSNexus](https://www.osnexus.com)
