--- a/DIVD-2022-00020.md
+++ b/DIVD-2022-00020.md
@@ -37,7 +37,7 @@ timeline:
 
 ## Summary
 
-DIVD researcher Wietse Boonstra discovered five vulnerabilities in OSNEXUS QuantaStor. These vulnerabilities included a Server-Side Request Forgery, Remote Command Execution, Privilege Escalation and two Cross-Site Scripting vulnerabilities. Use of these vulnerabilities could lead to the compromise of your Bitbucket server.
+DIVD researcher Wietse Boonstra discovered five vulnerabilities in OSNEXUS QuantaStor. These vulnerabilities included a Server-Side Request Forgery, Remote Command Execution, Privilege Escalation and two Cross-Site Scripting vulnerabilities. Use of these vulnerabilities could lead to the compromise of your server.
 
 ## Impact
 
