Replace /team/ urls with /people/ urls

--- a/_cases/2020/DIVD-2020-00011.md
+++ b/_cases/2020/DIVD-2020-00011.md
@@ -244,7 +244,7 @@ ips: 1040
 
 ## Samenvatting
 
-DIVD Onderzoeker [Wietse Boonstra](https://www.divd.nl/team/Wietse%20Boonstra/) heeft vier ernstige kwetsbaarheden in [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/) ontdekt.
+DIVD Onderzoeker [Wietse Boonstra](https://www.divd.nl/people/Wietse%20Boonstra/) heeft vier ernstige kwetsbaarheden in [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/) ontdekt.
 
 Deze vier kwetsbaarheden zijn:
 * [Unauthenticated remote command execution (CVE-2021-26471)](/CVE-2021-26471/) met CVSS base score of 9.8
@@ -306,7 +306,7 @@ De afgelopen maanden hebben we samengewerkt met Vembu om te zorgen dat er patach
 
 ## Summary
 
-DIVD Researcher [Wietse Boonstra](https://www.divd.nl/team/Wietse%20Boonstra/) has discovered four critical vulnerabilities in [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/)
+DIVD Researcher [Wietse Boonstra](https://www.divd.nl/people/Wietse%20Boonstra/) has discovered four critical vulnerabilities in [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/)
 
 These four vulnerabilities are:
 * [Unauthenticated remote command execution (CVE-2021-26471)](/CVE-2021-26471/) with a CVSS base score of 9.8
