--- a/_cases/2022/DIVD-2022-00054.md
+++ b/_cases/2022/DIVD-2022-00054.md
@@ -46,6 +46,9 @@ timeline:
 - start: 2022-10-26
   end:
   event: "First mail run completed."
+- start: 2022-11-08
+  end:
+  event: "Microsoft releases a security update addressing this vulnerability."
 - start: 2022-11-09
   end:
   event: "Vulnerability exploited in the wild."
@@ -60,15 +63,15 @@ This vulnerability allows authenticated attackers to achieve Remote Command Exec
 
 Exchange Online customers are protected against these attacks. Customers running an on-premises installation of Exchange Server 2013, 2016 and 2019 are advised to apply one of the suggested mitigations in the [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/). 
 
-So far, Microsoft has observed a limited amount of targeted attacks using these vulnerabilities. Because both vulnerabilities require authentication, mass-exploitation is hard. Regardless, it is advised to mitigate these vulnerabilities as soon as possible as exploitation could lead to the compromise of integrity, availability and confidentiality on systems.  
+So far, Microsoft has observed a limited amount of targeted attacks using these vulnerabilities. Because both vulnerabilities require authentication, mass-exploitation is hard. Regardless, it is advised to mitigate these vulnerabilities as soon as possible as exploitation could lead to the compromise of integrity, availability and confidentiality on systems. 
 
 ## What you can do
 
-Companies running Exchange Server 2013, 2016 or 2019 (on-premises) should mitigate these vulnerabilities as soon as possible using the mitigations suggested in the advisory. Furthermore, it is important to keep a close eye on published patches for these issues.
+Companies running Exchange Server 2013, 2016 or 2019 (on-premises) should mitigate these vulnerabilities as soon as possible using the mitigations suggested in the advisory. Furthermore, on November 8th 2022, Microsoft released a [security update](https://techcommunity.microsoft.com/t5/exchange-team-blog/released-november-2022-exchange-server-security-updates/ba-p/3669045) for Exchange servers that address this issue.
 
 If you have been running Exchange Server, we recommend to check your server logs for any suspicious activity such as installation of the [Chopper Web Shell](https://en.wikipedia.org/wiki/China_Chopper) or any arbitrary PowerShell commands. 
 
-The suggested mitigations by Microsoft include disabling remote access to PowerShell for non-administrator users and using a URL Rewrite Rule. For guidance on implementing these mitigations, view the [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/). Moreover, detection rules for both vulnerabilities have been provided by Microsoft. For these, view Microsoft's [blogpost](https://www.microsoft.com/security/blog/2022/09/30/analyzing-attacks-using-the-exchange-vulnerabilities-cve-2022-41040-and-cve-2022-41082/) on this topic. 
+The suggested mitigations by Microsoft, aside from installing the security update, include disabling remote access to PowerShell for non-administrator users and using a URL Rewrite Rule. For guidance on implementing these mitigations, view the [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/). Moreover, detection rules for both vulnerabilities have been provided by Microsoft. For these, view Microsoft's [blogpost](https://www.microsoft.com/security/blog/2022/09/30/analyzing-attacks-using-the-exchange-vulnerabilities-cve-2022-41040-and-cve-2022-41082/) on this topic. 
 
 ## What we are doing
 
@@ -80,4 +83,5 @@ We are actively scanning the internet for Exchange instances that do not have th
 
 * [Security Advisory](https://msrc-blog.microsoft.com/2022/09/29/customer-guidance-for-reported-zero-day-vulnerabilities-in-microsoft-exchange-server/)
 * [Detection of Attacks](https://www.microsoft.com/security/blog/2022/09/30/analyzing-attacks-using-the-exchange-vulnerabilities-cve-2022-41040-and-cve-2022-41082/)
+* [Security Update November 8th](https://techcommunity.microsoft.com/t5/exchange-team-blog/released-november-2022-exchange-server-security-updates/ba-p/3669045)
 
