--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -14,7 +14,7 @@ cves:
 - CVE-2022-43781
 product: Bitbucket Server, Bitbucket Data Center
 versions: v7.0 to v7.5, v7.6.0 to v7.6.18, v7.7 to v7.16, v7.17.0 to v7.17.11, v7.18 to v7.20, v7.21.0 to v7.21.5 and if `mesh.enabled` is set to `false` in `bitbucket.properties`, v8.0 to v8.4.1. 
-recommendation: "Upgrade your affected installations to one of the by Atlassian listed fixed versions in the Security Advisory."
+recommendation: "Upgrade your affected installations to one of the fixed versions listed by Atlassian in their Security Advisory."
 workaround: "If upgrading is not an option, a temporary mitigation step is to disable the Public Signup option. This changes the attack vector from unauthenticated to authenticated."
 start: 2022-11-17
 end:
