--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -24,7 +24,7 @@ timeline:
   event: "DIVD starts tracking this vulnerability"
 - start: 2022-11-22
   end:
-  event: "DIVD creates a fingerprint for this vulnerability"
+  event: "DIVD creates a method to fingerprint servers for this vulnerability"
 - start: 2022-11-26
   end:
   event: "DIVD starts a first scan to find vulnerable parties"
