--- a/_cases/2022/DIVD-2022-00060.md
+++ b/_cases/2022/DIVD-2022-00060.md
@@ -36,7 +36,7 @@ timeline:
 
 ## Summary
 
-There is a command injection vulnerability in Bitbucket Server and Data Center that leverages environment variables to gain code execution and execute code on the system. Atlassian Cloud sites are not affected by this vulnerability. There are multiple affected versions, and in the [Security Advisory](https://confluence.atlassian.com/bitbucketserver/bitbucket-server-and-data-center-security-advisory-2022-11-16-1180141667.html), Atlassian recommends to upgrade to one of the patched versions.
+There is a command injection vulnerability in Bitbucket Server and Data Center that leverages environment variables execute code on the system. Atlassian Cloud sites are not affected by this vulnerability. There are multiple affected versions, and in their [Security Advisory](https://confluence.atlassian.com/bitbucketserver/bitbucket-server-and-data-center-security-advisory-2022-11-16-1180141667.html), Atlassian recommends to upgrade to one of the patched versions.
 
 If upgrading is not possible, disabling the Public Signup option changes the attack vector from unauthenticated to authenticated. Doing so lowers the risk of exploitation. Bitbucket Server and Data Center instances running PostgreSQL are not affected. 
 
