Closing case DIVD-2022-00033

--- a/_cases/2022/DIVD-2022-00033.md
+++ b/_cases/2022/DIVD-2022-00033.md
@@ -20,9 +20,9 @@ versions:
 recommendation: Patches are available.
 patch_status: Patch available
 workaround: If access cannot be blocked or Confluence taken offline a WAF that blocks requests containing `${` may provide additional protection
-status: Open
+status: Closed
 start: 2022-06-03
-end:
+end:   2022-12-01
 timeline:
 - start: 2022-06-02
   end:
@@ -63,6 +63,8 @@ timeline:
 - start: 2022-11-05
   end: 
   event: "Rescan and notify (again with a non-intrusive command execution) for visibility on the decreasing number of vulnerable instances."
+- start: 2022-12-01
+  event: "Case closed"
 ips: 18469
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
@@ -80,7 +82,6 @@ What we know so far:
 
 Atlassian has released a patch, see [their security advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html) for details.
 Patched versions are:
-```
 - 7.4.17
 - 7.13.7
 - 7.14.3
@@ -88,7 +89,7 @@ Patched versions are:
 - 7.16.4
 - 7.17.4
 - 7.18.1
-```
+
 
 ## What you can do
 
