feat(knx): initial text draft

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -1,57 +1,77 @@
 ---
 layout: case
-title: Command Injection vulnerability in Bitbucket Server and Data Center
-author: Max van der Horst
-lead: Melvin Boers
+title: KNXnet interfaces: secure your installation today! 
+author: Pepijn van der Stap
+lead: Pepijn van der Stap
 status: Open
-excerpt: DIVD is scanning for parties vulnerable to CVE-2022-43781
+excerpt: DIVD is scanning for and notifying parties that have KNXNet interfaces accessible via the internet
 researchers:
-- Ralph Horn
-- Kaj Koole
-- Stan Plasmeijer
-- Max van der Horst
-cves:
-- CVE-2022-43781
-product: Bitbucket Server, Bitbucket Data Center
-versions: v7.0 to v7.5, v7.6.0 to v7.6.18, v7.7 to v7.16, v7.17.0 to v7.17.11, v7.18 to v7.20, v7.21.0 to v7.21.5 and if `mesh.enabled` is set to `false` in `bitbucket.properties`, v8.0 to v8.4.1. 
-recommendation: "Upgrade your affected installations to one of the fixed versions listed by Atlassian in their Security Advisory."
-workaround: "If upgrading is not an option, a temporary mitigation step is to disable the Public Signup option. This changes the attack vector from unauthenticated to authenticated."
-start: 2022-11-17
+- Daan Kuiper
+- Pepijn van der Stap
+- Lennaert Oudshoorn
+- Melvin Boers
+- Koen van Hove
+[//]: # (cves:) - commented out because there is no CVE for this vulnerability
+[//]: # (- ) - @TODO: can these lines be removed?
+product: KNXNet protocol, KNXNet/IP router/interface
+versions: N/A 
+recommendation: "Close the port(s) that are used for KNXNet/IP communication. If you are using a KNXNet/IP router, make sure that it is not accessible via the internet."
+workaround: "If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network."
+start: 2022-02-08
 end:
 timeline:
-- start: 2022-11-17
+- start: 2022-02-08
   end:
-  event: "DIVD starts tracking this vulnerability"
-- start: 2022-11-22
+  event: "DIVD begins to act on Computest's report about insecure (home) automation systems (KNXNet standard)"
+- start: 2022-02-10
   end:
-  event: "DIVD creates a method to fingerprint servers for this vulnerability"
-- start: 2022-11-26
+  event: "DIVD receives in depth support from Computest to further investigate the protocol and its vulnerabilities"
+- start: 2022-04-01
   end:
-  event: "DIVD starts a first scan to find vulnerable parties"
-- start: 2022-11-26
+  event: "DIVD encounters some inconveniences with the KNXNet protocol and its scanning infrastructure"
+- start: 2022-06-01
   end:
-  event: "First version of this case file"
+  event: "DIVD starts again with the preliminary research on the KNXNet protocol"
+- start: 2022-12-02
+  end:
+  event: "DIVD releases a first version of this case file and starts scanning for vulnerable parties"
 
 ---
 
 ## Summary
 
-There is a command injection vulnerability in Bitbucket Server and Data Center that leverages environment variables execute code on the system. Atlassian Cloud sites are not affected by this vulnerability. There are multiple affected versions, and in their [Security Advisory](https://confluence.atlassian.com/bitbucketserver/bitbucket-server-and-data-center-security-advisory-2022-11-16-1180141667.html), Atlassian recommends to upgrade to one of the patched versions.
+KNXNet is a protocol that is used to control home automation systems. It is used in many countries, including the Netherlands, Germany, France, and the United Kingdom. The protocol is used to control lights, heating, and other devices in a home. The protocol is also used in industrial automation systems. The protocol is used in many different ways, including via a KNXNet/IP router, which is a device that connects to a local network and allows KNXNet devices to communicate with each other.
 
-If upgrading is not possible, disabling the Public Signup option changes the attack vector from unauthenticated to authenticated. Doing so lowers the risk of exploitation. Bitbucket Server and Data Center instances running PostgreSQL are not affected. 
+Often, KNX is set up by a professional installer. The installer is responsible for setting up the KNXNet/IP router and for securing it. However, it is also possible to set up KNX yourself. In this case, the KNXNet/IP router is often not secured. This means that it is possible to connect to the KNXNet/IP router and to control the KNX devices that are connected to it.
+
+After installing a KNXNet/IP router, it is possible to connect to it via a web interface. However, after the professional installer has set it up, the port should simply be closed; access it no longer needed. However, this is often not done. This means that the KNXNet/IP router is accessible via the internet. This is a problem because it is possible to connect to the KNXNet/IP router and to control the KNX devices that are connected to it.
+
+For attackers, it is possible to connect to an interface built on top of the KNXNet protocol and to control KNX devices that are connected to it. 
+
+This is a very serious security issue, because it means that it is possible to control devices in a home or in an industrial environment without the owner's permission; a form of unauthorized access. 
+
+Computest made a [report](https://www.computest.nl/en/news/news-and-press-releases/homes-offices-vulnerable-unsecure-domotica/) about this issue. DIVD has been working with Computest to investigate the possibility of informing parties of security issues in their home automation systems.
+
+We has been able to reproduce the issue and has been able to find a way to scan for vulnerable KNXNet/IP routers. We will be informing parties with insecure home automation systems about this issue, in order to help them to secure their automation systems and to prevent unauthorized access to e.g. heating systems, lights, and other devices.
 
 ## What you can do
 
-We advise you to upgrade your instance to one of the listed patched versions in the [Security Advisory](https://confluence.atlassian.com/bitbucketserver/bitbucket-server-and-data-center-security-advisory-2022-11-16-1180141667.html).
-If doing so is not possible, disabling the Public Signup option temporarily narrows down the attack vector of the vulnerability.
+
+We advise you to contact your installer to make sure that the KNXNet/IP router is no longer accessible via the internet and that the port(s) are closed.
+If you set up your KNXNet/IP router yourself, we advise you to close the port(s) that are used for KNXNet/IP communication.
+
+- As described in ISO 22510:2019 the only way to properly secure KNX devices is for the protocol to reside in your local network. Port translation is not needed after the initial setup.
+- If you are using a KNXNet/IP router, make sure that it is not accessible via the internet. If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network.
 
 ## What we are doing
 
-We are actively scanning the internet for Bitbucket instances that have not yet upgraded to a patched version and will notify system owners via the listed abuse contacts.
+We are actively scanning the internet for vulnerable KNXNet/IP routers and will notify system owners via the listed abuse contacts if we find any.
 
 {% include timeline.html %}
 
 ## More information
 
-* [Atlassian Security Advisory](https://confluence.atlassian.com/bitbucketserver/bitbucket-server-and-data-center-security-advisory-2022-11-16-1180141667.html)
-* [NIST CVE Listing](https://nvd.nist.gov/vuln/detail/CVE-2022-43781)
+* [Computest report](https://www.computest.nl/en/news/news-and-press-releases/homes-offices-vulnerable-unsecure-domotica/)
+* [ISO 22510:2019](https://www.iso.org/obp/ui/fr/#iso:std:iso:22510:ed-1:v1:en) 
+* [Institute of Automation, Vienna University of Technology](https://www.researchgate.net/profile/Daniel-Lechner-4/publication/266907095_Security_for_KNXnetIP/links/555c56b508aec5ac2232b5de/Security-for-KNXnet-IP.pdf)
+* [Humboldt University of Berlin Institute of Computer Science](https://www.researchgate.net/profile/Robert-Guetzkow/publication/362188042_Security_Analysis_of_the_KNXnetIP_Secure_Protocol/links/62daebc1f3acdd5dc20f30b0/Security-Analysis-of-the-KNXnet-IP-Secure-Protocol.pdf)
