chore(knx): consistency in title + typo

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -1,18 +1,18 @@
 ---
 layout: case
-title: KNXnet interfaces: secure your installation today! 
+title: KNXNet interfaces: secure your installation today! 
 author: Pepijn van der Stap
 lead: Pepijn van der Stap
 status: Open
-excerpt: DIVD is scanning for and notifying parties that have KNXNet interfaces accessible via the internet
+excerpt: DIVD is scanning for and notifying parties about KNXNet interfaces that are accessible from the internet.
 researchers:
 - Daan Kuiper
 - Pepijn van der Stap
 - Lennaert Oudshoorn
 - Melvin Boers
 - Koen van Hove
-[//]: # (cves:) - commented out because there is no CVE for this vulnerability
-[//]: # (- ) - @TODO: can these lines be removed?
+  cves:
+- n/a 
 product: KNXNet protocol, KNXNet/IP router/interface
 versions: N/A 
 recommendation: "Close the port(s) that are used for KNXNet/IP communication. If you are using a KNXNet/IP router, make sure that it is not accessible via the internet."
