fix(knx): title

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: KNXNet interfaces: secure your installation today! 
+title: 'KNXNet interfaces: secure your installation today!' 
 author: Pepijn van der Stap
 lead: Pepijn van der Stap
 status: Open
