chore(knx): remove bullet points

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -59,8 +59,8 @@ We were able to reproduce the issue and have been able to find a way to scan for
 We advise you to contact your installer to make sure that the KNXNet/IP router is no longer accessible via the internet and that the port(s) are closed.
 If you set up your KNXNet/IP router yourself, we advise you to close the port(s) that are used for KNXNet/IP communication.
 
-- As described in ISO 22510:2019 the only way to properly secure KNX devices is for the protocol to reside in your local network. Port translation is not needed after the initial setup.
-- If you are using a KNXNet/IP router, make sure that it is not accessible via the internet. If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network.
+As described in ISO 22510:2019 the only way to properly secure KNX devices is for the protocol to reside in your local network. Port translation is not needed after the initial setup.
+If you are using a KNXNet/IP router, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network.
 
 ## What we are doing
 
