chore(knx): rename

--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -6,7 +6,8 @@ lead: Pepijn van der Stap
 status: Open
 excerpt: DIVD is scanning for and notifying parties about KNXNet interfaces that are accessible from the internet.
 researchers:
-- Daan Kuiper
+- Daan Keuper
+- Thijs Alkemade
 - Pepijn van der Stap
 - Lennaert Oudshoorn
 - Melvin Boers
